force-app/main/default/objects/WhatsappDanone__Whatsapp_Message__c/WhatsappDanone__Whatsapp_Message__c.object-meta.xml
<CustomObject>
    <label>Mensaje de Whatsapp</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Numero de mensaje</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mensajes de Whatsapp</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>