force-app/main/default/objects/WhatsappDanone__Whatsapp_Message__c/fields/WhatsappDanone__Case__c.field-meta.xml
<CustomField>
    <fullName>WhatsappDanone__Case__c</fullName>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Mensajes de Whatsapp</relationshipLabel>
    <relationshipName>Mensajes_de_Whatsapp</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>