force-app/main/default/objects/WhatsappDanone__Whatsapp_Message__c/fields/WhatsappDanone__Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>WhatsappDanone__Case_Owner__c</fullName>
    <formula>WhatsappDanone__Case__r.OwnerId</formula>
    <label>Propietario del Caso</label>
    <type>Text</type>
</CustomField>