force-app/main/default/objects/WhatsappDanone__Whatsapp_Message__c/fields/WhatsappDanone__Message__c.field-meta.xml
<CustomField>
    <fullName>WhatsappDanone__Message__c</fullName>
    <label>Mensaje</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>