force-app/main/default/objects/WhatsappDanone__Whatsapp_Message__c/fields/WhatsappDanone__Type__c.field-meta.xml
<CustomField>
    <fullName>WhatsappDanone__Type__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensaje de Danone</fullName>
                <default>true</default>
                <label>Mensaje de Danone</label>
            </value>
            <value>
                <fullName>Enviado por el cliente</fullName>
            </value>
            <value>
                <fullName>Mensaje de Danone Automatico</fullName>
                <label>Mensaje de Danone Automático</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>